2004-05-17  Jeffrey Stedfast  <fejj@novell.com>

	* camel-gpg-context.c (gpg_decrypt): If the encrypted block was
	also signed, set the signature verification status on the Validity
	structure as well.

2004-05-17  Not Zed  <NotZed@Ximian.com>

	** Bug #56050.

	* providers/imap/camel-imap-store.c (imap_get_trash) 
	(imap_get_junk): similar to below.

	* providers/local/camel-local-store.c (local_get_trash)
	(local_get_junk): set state file on trash/junk to something we know
	about.

2004-05-17  Not Zed  <NotZed@Ximian.com>
	* providers/local/camel-mh-store.c (fill_fi): if we have no folder
	in-memory, load it if we're not doing it fast to get really up to
	date unread counts.  #57616.

2004-05-14  Not Zed  <NotZed@Ximian.com>

	* camel-store.c (camel_store_create_folder): don't allow creation
	of Trash or Junk folders.
	(camel_store_rename_folder): similar for rename.  #57250.

2004-05-13  Not Zed  <NotZed@Ximian.com>

	* camel-folder-summary.c (summary_build_content_info): set secure
	flag if we have a known security type.
	(flag_names[]): Added secure bit.
	(summary_build_content_info_message): set secure flag as
	appropriate.
	(summary_build_content_info_message): dont set attachments for
	simple types (non text), only base it on multipart/* stuff.
	(summary_build_content_info): same.

	* camel-folder-summary.h: added SECURE flag.  Indicates signed or
	encrypted content.

2004-05-12  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap/camel-imap-folder.c (camel_imap_folder_selected):
	Ignore PERMANENTFLAGS if it gives us an empty set. Works around
	broken IMAP servers like the one in bug #58355.

2004-05-12  Not Zed  <NotZed@Ximian.com>

	* camel-folder-search.c (search_threads): changed to match_threads.
	(camel_folder_search_search): remove thread matching stuff from here.

2004-05-11  Jeffrey Stedfast  <fejj@novell.com>

	* camel-smime-context.c (sm_signing_cmsmessage): Fixed a
	type-o. Fixes bug #58348.

2004-05-10  Jeffrey Stedfast  <fejj@novell.com>
